added program section

--- a/src/Styles/variables.scss
+++ b/src/Styles/variables.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Anton&family=Open+Sans:wght@400;500;600;700&family=Roboto:wght@400;500;700&family=Teko:wght@300;400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Anton&family=League+Spartan:wght@400;500;600;700&family=Open+Sans:wght@400;500;600;700&family=Roboto:wght@400;500;700&family=Teko:wght@300;400;500;600;700&display=swap');
 
 //font
 $roboto: 'Roboto', "Times New Roman";
@@ -6,6 +6,7 @@ $open-sans: 'Open Sans', "Times New Roman";
 $anton: 'Anton', "Times New Roman";
 $teko: 'Teko', "Times New Roman";
 $times: "Times New Roman";
+$spartan: 'League Spartan', sans-serif;
 
 //colors
 $white: rgba(249, 252, 255, 1);
