--- a/src/Styles/variables.scss
+++ b/src/Styles/variables.scss
@@ -9,7 +9,7 @@ $times: "Times New Roman";
 $spartan: 'League Spartan', sans-serif;
 
 //colors
-$white: rgba(249, 252, 255, 1);
+$white: #f5f5f5;
 $paleblue:rgba(0, 146, 242, 1);
 $lightblue: rgba(1, 114, 218, 1);
 $darkblue: rgba(0, 34, 209, 1);
