--- a/src/Styles/index.scss
+++ b/src/Styles/index.scss
@@ -1,4 +1,16 @@
 @import "./variables.scss";
+::-webkit-scrollbar{
+    width: 10px;
+}
+::-webkit-scrollbar-track{
+    background-color: #f1f1f1;
+    border-radius: 5px;
+}
+::-webkit-scrollbar-thumb{
+    background-color: #888;
+    border-radius: 5px;
+    cursor: pointer;
+}
 
 *{
     box-sizing: border-box;
