--- a/src/Styles/footer.scss
+++ b/src/Styles/footer.scss
@@ -45,6 +45,11 @@ font-size: 16px;
 font-family: $roboto;  
 cursor: pointer;
 margin-bottom: 5px;
+
+a{
+    color: #fff;
+    text-decoration: none;
+}
 } 
     }
    }
