--- a/src/Styles/navbar.scss
+++ b/src/Styles/navbar.scss
@@ -35,6 +35,11 @@
             font-size: 16px;
             font-weight: bold;
             cursor: pointer;
+
+            a{
+                color: #000;
+                text-decoration: none;
+            }
         }
 
     li:hover{
