--- a/src/Styles/Home/accreditation.scss
+++ b/src/Styles/Home/accreditation.scss
@@ -8,6 +8,10 @@
         border: 1px solid $orange;
         width: 300px;
         margin: 10px auto;
+
+        @include cards{
+            width: 150px;
+         }
     }
 
     h1{
@@ -17,6 +21,16 @@
         text-transform: capitalize;
         font-size: 30px;
         padding: 10px 0;
+
+        @include cards{
+            font-size: 25px;
+         }
+         @include intermediary{
+            font-size: 20px;
+         }
+         @include small{
+            font-size: 16px;
+         }
     }
 
     p{
@@ -24,6 +38,13 @@
         font-family: $roboto;
         text-transform: capitalize;
         font-size: 16px;
+
+        @include cards{
+            font-size: 14px;
+         }
+         @include intermediary{
+            font-size: 12px;
+         }
     }
 
     .flags{
@@ -32,13 +53,19 @@
         justify-content: center;
         padding: 50px;
 
+        @include medium{
+            flex-wrap: wrap;
+        }
+
         .flag{
+
             margin: 10px 30px;
             img{
                 width: 50px;
                 height: auto;
                 border-radius: 50%;
             }
+
         }
     }
 
@@ -59,6 +86,15 @@
             text-transform: capitalize;
             font-size: 28px;
             padding: 15px;
+            @include medium{
+                font-size: 20px;
+            }
+            @include intermediary{
+                font-size: 16px;
+            }
+            @include medium{
+                font-size: 20px;
+            }
         }
 
         .AccredButtons{
@@ -76,6 +112,7 @@
                 font-size: 14px;
                 font-weight: bold;
                 margin-right: 20px;
+                cursor: pointer;
 
                 img{
                     width: 20px;
