--- a/src/Styles/Programs/courseInfo.scss
+++ b/src/Styles/Programs/courseInfo.scss
@@ -3,11 +3,18 @@
     width: 100vw;
     background: $white;
     padding: 40px;
+    @include intermediary{
+       padding: 40px 15px;
+     }
 
     hr{
         border: 1px solid $red;
         width: 300px;
         margin: 10px auto;
+
+        @include cards{
+            width: 150px;
+         }
     }
 
     h1{
@@ -17,6 +24,16 @@
         text-transform: capitalize;
         font-size: 30px;
         padding: 10px 0;
+
+        @include cards{
+            font-size: 25px;
+         }
+         @include intermediary{
+            font-size: 20px;
+         }
+         @include small{
+            font-size: 16px;
+         }
     }
 
     h4{
@@ -30,5 +47,9 @@
         font-family: $spartan;
         font-size: 16px;
         padding: 15px 50px;
+
+        @include intermediary{
+            padding: 10px;
+          }
     }
  }
