--- a/src/Styles/footer.scss
+++ b/src/Styles/footer.scss
@@ -5,15 +5,29 @@
     padding: 40px;
     width: 100vw;
    background: rgba(2, 35, 57, 1);
+
+   @include medium{
+    flex-direction: column;
+    align-items: center;
+   }
     
    .sec1, .sec2, .sec3{
     width: 33%;
     margin-right: 30px;
+
+    @include medium{
+        width: 100%;
+        margin: 0 0 15px;
+       }
     h1{
         font-family: 'Times New Roman', Times, serif;
         color: #fff;
         font-size: 24px;
         padding: 15px 0;
+
+        @include medium{
+            text-align: center;
+           }
     }
 
     p{
@@ -21,22 +35,40 @@
         color: #fff;
         font-size: 14px;
         word-wrap: break-word;
+
+        @include medium{
+            text-align: center;
+            font-size: 16px;
+           }
     }
    }
    .sec1{
     ul{
         display: flex;
         padding: 15px 0;
+        @include medium{
+           justify-content: center;
+           }
         li{
             color: #fff;
     margin-right: 10px; 
 font-size: 16px;       
 cursor: pointer;
-font-family: $roboto;  
+font-family: $roboto; 
+
+@include medium{
+   font-size: 40px;
+   margin-right: 20px; 
+    }
 }
     }
    }
    .sec2{
+    @include medium{
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        }
     ul{
         li{
             color: #fff;
@@ -46,6 +78,10 @@ font-family: $roboto;
 cursor: pointer;
 margin-bottom: 5px;
 
+@include medium{
+    text-align: center;
+    }
+
 a{
     color: #fff;
     text-decoration: none;
@@ -54,8 +90,14 @@ a{
     }
    }
    .sec3{
+    @include medium{
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        }
     ul{
         li{
+            
             color: #fff;
     margin-right: 10px; 
 font-size: 14px;     
@@ -64,6 +106,11 @@ display: flex;
 align-items: center;
 cursor: pointer;
 margin-bottom: 5px;
+
+@include medium{
+    justify-content: center;
+    text-align: center;
+    }
 
 .icon{
     font-size: 18px;
