--- a/src/Styles/Home/banner.scss
+++ b/src/Styles/Home/banner.scss
@@ -16,14 +16,21 @@
         justify-content: center;
         padding: 0 80px;
 
+        @include medium{
+            width: 100%;
+            padding: 0 30px;
+        }
+
         img{
             width: 100%;
             height: 100%;
             object-fit: cover;
+            object-position: center;
             position: absolute;
             left: 0;
             top: 0;
             opacity: 0.9;
+            filter: brightness(70%);
         }
 
         h1{
@@ -34,6 +41,18 @@
             width: 50%; 
             opacity: 0;
             margin-bottom: 10px;   
+
+            @include large{
+                font-size: 35px;
+                width: 70%;
+                line-height: 40px;
+            }
+       
+            @include medium{
+                width: 100%;
+            
+            }
+           
        
     }
         p{
@@ -43,6 +62,18 @@
             font-size: 22px;
             line-height: 44px;
             width: 50%; 
+
+            @include large{
+                font-size: 18px;
+                width: 70%;
+                line-height: 22px;
+            }
+       
+            @include medium{
+                width: 100%;
+                font-size: 16px;
+                line-height: 20px;
+            }
         }
         button{
             z-index: 10;
