--- a/src/Styles/Home/event.scss
+++ b/src/Styles/Home/event.scss
@@ -3,11 +3,19 @@
     width: 100vw;
     background: $white;
     padding: 40px;
+    
+    @include intermediary{
+        padding: 40px 15px;
+      }
 
     hr{
         border: 1px solid $orange;
         width: 300px;
         margin: 10px auto;
+
+        @include cards{
+            width: 150px;
+         }
     }
 
     h1{
@@ -17,19 +25,44 @@
         text-transform: capitalize;
         font-size: 30px;
         padding: 10px 0;
+
+        @include cards{
+            font-size: 25px;
+         }
+         @include intermediary{
+            font-size: 20px;
+         }
+         @include small{
+            font-size: 16px;
+         }
     }
     .eventPlaceholder{
     padding: 30px 70px;
     display: flex;
     position: relative;
 
+    @include medium{
+        padding: 30px;
+        flex-direction: column;
+        align-items: center;
+    }
+    @include intermediary{
+        padding: 30px 15px;
+    }
     .eventImg{
         width: 50%;
         overflow: hidden;
+        @include medium{
+            width: 100%;
+        }
 
         img{
             width: 90%;
             height: auto;
+
+            @include medium{
+                width: 100%;
+            }
         }
     }
     .eventInfo{
@@ -39,6 +72,11 @@
         left: 40%;
         top: 35%;
         padding: 25px;
+
+        @include medium{
+            position: static;
+            width: 100%;
+        }
 
         h1{
             text-align: left;
