--- a/src/Styles/Home/program.scss
+++ b/src/Styles/Home/program.scss
@@ -10,6 +10,9 @@
         border: 1px solid $orange;
         width: 300px;
         margin: 10px auto;
+        @include cards{
+           width: 150px;
+        }
     }
 
     h1{
@@ -19,6 +22,16 @@
         text-transform: capitalize;
         font-size: 30px;
         padding: 10px 0;
+
+        @include cards{
+            font-size: 25px;
+         }
+         @include intermediary{
+            font-size: 20px;
+         }
+         @include small{
+            font-size: 16px;
+         }
     }
 
     p{
@@ -26,19 +39,36 @@
         font-family: $roboto;
         text-transform: capitalize;
         font-size: 16px;
+
+        @include cards{
+            font-size: 14px;
+         }
+         @include intermediary{
+            font-size: 12px;
+         }
     }
 
     .mainCardContainer{
         width: 100%;
         display: grid;
-        grid-template-columns: repeat(3, 1fr);
+        grid-template-columns: repeat(auto-fit, 400px);
+
+        @include card {
+            grid-template-columns: repeat(auto-fit, 45%);
+        }
+        @include cards{
+            grid-template-columns: repeat(auto-fit, 100%);
+        }
         column-gap: 10px;
         row-gap: 15px;
+        justify-content: center;
         place-items: center;
         padding: 60px 0;
 
+
+
         .cardContainer{
-            width: 400px;
+            width: 100%;
             height: 500px;
             position: relative;
             box-shadow: 0px 3px 2px -3px rgba(0,0,0,0.75);
