--- a/src/Styles/Programs/explore.scss
+++ b/src/Styles/Programs/explore.scss
@@ -1,6 +1,10 @@
 @import "../variables.scss";
 .explore{
     padding: 40px;
+
+    @include intermediary{
+        padding: 40px 10px;
+    }
     h1{
         font-family: $spartan;
         color: $paleblue;
@@ -14,6 +18,10 @@
         padding: 40px 0;
         justify-content: space-between;
 
+        @include medium {
+            flex-direction: column;
+        }
+
         div{
             width: 50%;
             margin: 0 10px;
@@ -23,6 +31,10 @@
             align-items: center;
             position: relative;
             
+            @include medium {
+                width: 100%;
+                margin: 10px 0;
+            }
 
             button{
                 position: absolute;
