--- a/src/Styles/Programs/goal.scss
+++ b/src/Styles/Programs/goal.scss
@@ -3,6 +3,9 @@
     width: 100vw;
     background: $white;
     padding: 40px;
+    @include intermediary{
+        padding: 40px 15px;
+    }
 
     hr{
         border: 1px solid $red;
@@ -18,6 +21,10 @@
         font-size: 30px;
         padding: 10px 0;
         color: $red;
+
+        @include intermediary{
+            font-size: 24px; 
+        }
     }
 
     p{
@@ -25,5 +32,12 @@
         font-family: $spartan;
         font-size: 16px;
         padding: 10px 50px;
+
+        @include intermediary{
+            padding: 10px;
+            font-size: 14px;
+        }
+
+
     }
 }
