--- a/src/Styles/Home/accreditation.scss
+++ b/src/Styles/Home/accreditation.scss
@@ -119,6 +119,11 @@
                     height: auto;
                     margin-right: 10px;
                 }
+
+                a{
+                    color: #000;
+                    text-decoration: none;
+                }
             }
         }
     }
