--- a/src/Styles/Programs/minProgram.scss
+++ b/src/Styles/Programs/minProgram.scss
@@ -26,7 +26,7 @@
 
     .minProgs{
         display: flex;
-        height: 292px;
+        min-height: 292px;
         margin: 15px 10px;
         box-shadow: 3px 3px 2px -3px rgba(0,0,0,0.75);
         -webkit-box-shadow: 3px 3px 2px -3px rgba(0,0,0,0.75);
@@ -34,8 +34,8 @@
         border-radius: 15px;
 
         .progImage{
-            width: 40%;
-            height: 100%;
+            min-width: 40%;
+            min-height: 100%;
             margin-right: 10px;
 
             img{
@@ -49,8 +49,10 @@
 
         .progInfo{
             min-width: 50%;
-            p{
-                font-size: 12px;
+            padding: 30px 0;
+            h2{
+                font-size: 16px;
+                padding: 10px 0;
                 color: $paleblue;
                 font-family: $spartan;
                 margin-bottom: 5px;
