--- a/src/Styles/Programs/learn.scss
+++ b/src/Styles/Programs/learn.scss
@@ -59,6 +59,10 @@
             font-size: 50px;
             margin: 20px 15px;
             cursor: pointer;
+
+            a{
+                color: #fff;
+            }
         }
     }
 }
