--- a/src/Styles/index.scss
+++ b/src/Styles/index.scss
@@ -39,6 +39,7 @@ body{
     position: fixed;
     bottom: 40px;
     right:40px;
+    background-color: transparent;
 
     @include intermediary{
         right: 20px;
