--- a/src/Styles/Detail/detail.scss
+++ b/src/Styles/Detail/detail.scss
@@ -2,6 +2,10 @@
 .programDetail{
     .programDetailContent{
         padding: 40px 0;
+
+        @include intermediary{
+            padding: 20px 0;
+        }
             h1{
                 text-align: center;
                 font-family: $roboto;
@@ -9,6 +13,10 @@
                 text-transform: capitalize;
                 font-size: 30px;
                 margin-bottom: 10px;
+
+                @include intermediary{
+                    font-size: 22px;
+                }
             }
        
             .detailImg{
@@ -53,7 +61,13 @@
                         text-decoration-thickness: 2px;
                         font-family: $roboto;
                     }
-
+h3{
+    margin-bottom: 15px;
+    font-family: $spartan;
+    font-size: 22px;
+    color: rgba(0,0,0,0.9);
+    margin: 15px 0;
+}
                     p{
                         font-family: $spartan;
                         font-size: 16px;
