--- a/src/Styles/Home/program.scss
+++ b/src/Styles/Home/program.scss
@@ -69,7 +69,7 @@
 
         .cardContainer{
             width: 100%;
-            height: 500px;
+            min-height: 500px;
             position: relative;
             box-shadow: 0px 3px 2px -3px rgba(0,0,0,0.75);
             -webkit-box-shadow: 0px 3px 2px -3px rgba(0,0,0,0.75);
