--- a/src/Styles/footer.scss
+++ b/src/Styles/footer.scss
@@ -56,6 +56,9 @@ font-size: 16px;
 cursor: pointer;
 font-family: $roboto; 
 
+a{
+    color: #fff;
+}
 @include medium{
    font-size: 40px;
    margin-right: 20px; 
@@ -115,6 +118,7 @@ margin-bottom: 5px;
 .icon{
     font-size: 18px;
     margin-right: 8px;
+    display: block;
 }
 } 
    }
