--- a/src/Styles/Contact/form.scss
+++ b/src/Styles/Contact/form.scss
@@ -41,7 +41,7 @@ align-items: center;
     padding: 30px 10px;
 }
 
-input, textarea{
+input, textarea, select{
     width: 100%;
     border: 1.28486px solid #E1E1E1;
 border-radius: 6.4243px;
@@ -50,7 +50,7 @@ padding: 15px;
     margin-bottom: 15px;
 }
 
-input::placeholder, textarea::placeholder{
+input::placeholder, textarea::placeholder, select{
     font-family: $spartan;
 font-style: normal;
 font-weight: 400;
