--- a/src/Styles/Detail/detail.scss
+++ b/src/Styles/Detail/detail.scss
@@ -64,9 +64,10 @@
 h3{
     margin-bottom: 15px;
     font-family: $spartan;
-    font-size: 22px;
+    font-size: 24px;
     color: rgba(0,0,0,0.9);
     margin: 15px 0;
+    font-weight: bold;
 }
                     p{
                         font-family: $spartan;
@@ -157,4 +158,5 @@ h3{
                 }
             }
     }
+   
 }
